# MinesweeperMultiplayer

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake  README.md
cmake/: check_platform.cmake  includes.cmake
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/lib/: CMakeLists.txt
src/client/src/: CMakeLists.txt  client.cpp  client.hpp  gfx.cpp  gfx.hpp  main.cpp
src/server/src/: CMakeLists.txt  main.cpp  msmp_server.hpp
src/shared/: CMakeLists.txt
src/shared/include/: CMakeLists.txt
src/shared/include/shared/: exception.hpp  files.hpp  logging.hpp  msmp_shared.hpp  shared_config.hpp.in
src/shared/lib/: CMakeLists.txt
src/shared/src/: CMakeLists.txt  exception.cpp  files.cpp  logging.cpp  msmp_shared.cpp
